[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Plotter.gd" type="Script" id=1]

[node name="Control" type="Control"]
offset_right = 588.0
offset_bottom = 320.0
script = ExtResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
visible = false
offset_left = 12.0
offset_top = 336.0
offset_right = 328.0
offset_bottom = 352.0
min_value = 0.01
max_value = 5.0
step = 0.01
value = 1.65

[node name="p" type="HSlider" parent="."]
visible = false
offset_left = 12.0
offset_top = 440.0
offset_right = 328.0
offset_bottom = 456.0
min_value = 0.1
max_value = 1.5
step = 0.01
value = 0.3

[node name="B" type="HSlider" parent="."]
visible = false
offset_left = 12.0
offset_top = 388.0
offset_right = 328.0
offset_bottom = 404.0
min_value = 0.1
max_value = 20.0
step = 0.1
value = 1.0

[node name="BEnd" type="HSlider" parent="."]
visible = false
offset_left = 12.0
offset_top = 488.0
offset_right = 328.0
offset_bottom = 504.0
min_value = 2.2
max_value = 16.0
step = 0.5
value = 3.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 360.0
offset_top = 336.0
offset_right = 400.0
offset_bottom = 350.0

[node name="pText" type="Label" parent="."]
visible = false
offset_left = 360.0
offset_top = 444.0
offset_right = 400.0
offset_bottom = 458.0

[node name="BEndText" type="Label" parent="."]
visible = false
offset_left = 360.0
offset_top = 488.0
offset_right = 400.0
offset_bottom = 502.0

[node name="BText" type="Label" parent="."]
visible = false
offset_left = 360.0
offset_top = 388.0
offset_right = 400.0
offset_bottom = 402.0

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 360.0
offset_top = 356.0
offset_right = 400.0
offset_bottom = 370.0

[node name="Info" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = -24.0
offset_bottom = -10.0
align = 2

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="p" to="." method="_on_p_value_changed"]
[connection signal="value_changed" from="B" to="." method="_on_B_value_changed"]
[connection signal="value_changed" from="BEnd" to="." method="_on_BEnd_value_changed"]
